--- a/src/main/resources/connectionStrings.properties
+++ b/src/main/resources/connectionStrings.properties
@@ -1,4 +1,4 @@
 username = root
-password = master1k0
-project_database = jdbc:mysql://localhost:3306/syncoder_project
-authentication_database = jdbc:mysql://localhost:3306/syncoder_authentication
+password = mast3r1k0
+project_database = jdbc:mysql://localhost:3306/syncoder_project?useSSL=false
+authentication_database = jdbc:mysql://localhost:3306/syncoder_authentication?useSSL=false
