--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.8-dmr</version>
         </dependency>
+
+        <dependency>
+            <groupId>nl.fontys</groupId>
+            <artifactId>rmi</artifactId>
+            <version>1.0</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
@@ -56,6 +63,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>myMavenRepo.read</id>
+            <url>https://mymavenrepo.com/repo/ZyfBHGzPZQhQDW0R9ojS/</url>
+        </repository>
+    </repositories>
 
 
 </project>
