--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.casperpijnenburg</groupId>
     <artifactId>syncoder-server</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -48,7 +48,6 @@
             <artifactId>rmi</artifactId>
             <version>1.0</version>
         </dependency>
-
     </dependencies>
 
     <properties>
@@ -70,6 +69,5 @@
             <url>https://mymavenrepo.com/repo/ZyfBHGzPZQhQDW0R9ojS/</url>
         </repository>
     </repositories>
-
 
 </project>
