--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <fork>true</fork>
+                    <executable>D:\Program Files\Java\jdk1.8.0_144\bin\javac</executable>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
