--- a/src/main/resources/connectionStrings.properties
+++ b/src/main/resources/connectionStrings.properties
@@ -1,3 +1,5 @@
+# suppress inspection "SpellCheckingInspection" for whole file
+# suppress inspection "SpellCheckingInspection" for whole file
 username = sql11215100
 password = rquUkKy2Vs
 project_database = jdbc:mysql://sql11.freemysqlhosting.net:3306/sql11215100?useSSL=false
