--- a/pom.xml
+++ b/pom.xml
@@ -75,13 +75,12 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                    <fork>true</fork>
-                    <executable>D:\Program Files\Java\jdk1.8.0_144\bin\javac</executable>
                 </configuration>
             </plugin>
         </plugins>
@@ -103,6 +102,12 @@
             </build>
         </profile>
     </profiles>
+
+    <build>
+        <plugins>
+
+        </plugins>
+    </build>
 
     <repositories>
         <repository>
