--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <version>3.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.oracle.java</groupId>
+            <artifactId>jre</artifactId>
+            <version>1.8.0_131</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
